fuzzer/go/data/testdata/stacktrace/7bad_release.err
Decoding
../../src/core/SkPictureData.cpp:360: fatal error: ""nullptr == fOpData""
